Updating workflow with correct charts_dir

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,6 @@ jobs:
     - name: Run chart-releaser
       uses: helm/chart-releaser-action@v1.0.0-rc.1
       with:
-        charts_dir: docs
+        charts_dir: charts
       env:
         CR_TOKEN: "${{ secrets.CR_TOKEN }}"
