--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,11 +10,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Configure Git
-      run: |
-        git config user.name "$GITHUB_ACTOR"
-        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-    - name: Run chart-releaser
-      uses: helm/chart-releaser-action@v1.0.0-rc.1
-      env:
-        CR_TOKEN: "${{ secrets.CR_TOKEN }}"
+    - name: Package and Publish charts
+      uses: J12934/helm-gh-pages-action@master
+      with:
+        access-token: "${{ secrets.CR_TOKEN }}"
