Included revision as pod label and affinity label selectors for redis-ha-proxy

--- a/charts/redis-ha/templates/redis-haproxy-deployment.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-deployment.yaml
@@ -21,6 +21,7 @@ spec:
       labels:
         app: {{ template "redis-ha.name" . }}-haproxy
         release: {{ .Release.Name }}
+        revision: "{{ .Release.Revision }}"
       annotations:
       {{- if .Values.haproxy.metrics.enabled }}
         prometheus.io/port: "{{ .Values.haproxy.metrics.port }}"
@@ -56,6 +57,7 @@ spec:
                 matchLabels:
                   app: {{ template "redis-ha.name" . }}-haproxy
                   release: {{ .Release.Name }}
+                  revision: "{{ .Release.Revision }}"
               topologyKey: kubernetes.io/hostname
     {{- else }}
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -63,6 +65,7 @@ spec:
                 matchLabels:
                   app: {{ template "redis-ha.name" . }}-haproxy
                   release: {{ .Release.Name }}
+                  revision: "{{ .Release.Revision }}"
               topologyKey: kubernetes.io/hostname
     {{- end }}
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -72,6 +75,7 @@ spec:
                   matchLabels:
                     app:  {{ template "redis-ha.name" . }}-haproxy
                     release: {{ .Release.Name }}
+                    revision: "{{ .Release.Revision }}"
                 topologyKey: failure-domain.beta.kubernetes.io/zone
     {{- end }}
       initContainers:
