--- a/charts/redis-ha/templates/tests/test-redis-ha-pod.yaml
+++ b/charts/redis-ha/templates/tests/test-redis-ha-pod.yaml
@@ -13,7 +13,7 @@ spec:
     command:
       - sh
       - -c
-      - redis-cli -h {{ template "redis-ha.fullname" . }} -p {{ .Values.redis.port }} info server
+      - redis-cli -h {{ template "redis-ha.fullname" . }}-haproxy -p {{ .Values.redis.port }} info server
   {{- if .Values.imagePullSecrets }}
   imagePullSecrets: {{ toYaml .Values.imagePullSecrets | nindent 4 }}
   {{- end }}
