--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -21,7 +21,7 @@ replicas: 3
 ## index starts with 0 - which is master on init
 ## i.e. "8,9" means 8th and 9th slave will be replica with replica-priority=0
 ## see also: https://redis.io/topics/sentinel
-ro_replicas: "" # i.e. "8,9"
+ro_replicas: ""
 
 ## Kubernetes priorityClass name for the redis-ha-server pod
 # priorityClassName: ""
