redis-ha - ssh/s3 restore - missing namespaces

--- a/charts/redis-ha/templates/redis-ha-secret-init-ssh.yaml
+++ b/charts/redis-ha/templates/redis-ha-secret-init-ssh.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "redis-ha.fullname" . }}-init-ssh-env-secret
+  namespace: {{ .Release.Namespace }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
