--- a/charts/redis-ha/templates/redis-ha-configmap-init-s3.yaml
+++ b/charts/redis-ha/templates/redis-ha-configmap-init-s3.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "redis-ha.fullname" . }}-init-s3-env-cm
+  namespace: {{ .Release.Namespace }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
