--- a/charts/redis-ha/templates/redis-ha-secret-init-s3.yaml
+++ b/charts/redis-ha/templates/redis-ha-secret-init-s3.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "redis-ha.fullname" . }}-init-s3-env-secret
+  namespace: {{ .Release.Namespace }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
