--- a/charts/redis-ha/templates/redis-ha-secret.yaml
+++ b/charts/redis-ha/templates/redis-ha-secret.yaml
@@ -1,4 +1,7 @@
-{{- if or (regexFind "^.+@.+:.+" (toString .Values.restore.ssh.source)) (regexFind "^s3://.+|^S3://.+" (toString .Values.restore.s3.source)) }}
+{{- $regexRestoreS3 := "^s3://.+|^S3://.+" -}}
+{{- $regexRestoreSSH := "^.+@.+:.+" -}}
+
+{{- if or (regexFind $regexRestoreSSH (toString .Values.restore.ssh.source)) (regexFind $regexRestoreS3 (toString .Values.restore.s3.source)) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,10 +14,10 @@ metadata:
     app: {{ template "redis-ha.fullname" . }}
 type: Opaque
 data:
-{{- if regexFind "^.+@.+:.+" (toString .Values.restore.ssh.source) }}
+{{- if regexFind $regexRestoreSSH (toString .Values.restore.ssh.source) }}
   SSH_KEY: "{{ .Values.restore.ssh.key | b64enc }}"
 {{- end }}
-{{- if regexFind "^s3://.+|^S3://.+" (toString .Values.restore.s3.source) }}
+{{- if regexFind $regexRestoreS3 (toString .Values.restore.s3.source) }}
   AWS_SECRET_ACCESS_KEY: "{{ .Values.restore.s3.secret_key | b64enc }}"
   AWS_ACCESS_KEY_ID: "{{ .Values.restore.s3.access_key | b64enc }}"
 {{- end }}
