Implement changes to support SSL with redis 6  Add MASTER_PING_SUCCESSFUL boolean to init script Add health check script for redis and sentinel Added variable TLS_CLIENT_OPTION to shell scripts Include TLS_CLIENT_OPTION only if Values.sentinel.authClients is set to NO Add secret for sentinel password along with environment variable SENTINELAUTH in config-init and sentinel containers Added redis_liveness.sh and sentinel_liveness.sh to annotations checksum Added new values parameters to README Signed-off-by: Sarjak Shah <sshah@afilias.info>

--- a/charts/redis-ha/templates/redis-ha-announce-service.yaml
+++ b/charts/redis-ha/templates/redis-ha-announce-service.yaml
@@ -20,14 +20,30 @@ spec:
   publishNotReadyAddresses: true
   type: ClusterIP
   ports:
+  {{- if ne (int $root.Values.redis.port) 0 }}
   - name: server
     port: {{ $root.Values.redis.port }}
     protocol: TCP
     targetPort: redis
+  {{- end }}
+  {{- if $root.Values.redis.tlsPort }}
+  - name: server-tls
+    port: {{ $root.Values.redis.tlsPort }}
+    protocol: TCP
+    targetPort: redis-tls
+  {{- end }}
+  {{- if ne (int $root.Values.sentinel.port) 0 }}
   - name: sentinel
     port: {{ $root.Values.sentinel.port }}
     protocol: TCP
     targetPort: sentinel
+  {{- end }}
+  {{- if $root.Values.sentinel.tlsPort }}
+  - name: sentinel-tls
+    port: {{ $root.Values.sentinel.tlsPort }}
+    protocol: TCP
+    targetPort: sentinel-tls
+  {{- end }}
   {{- if $root.Values.exporter.enabled }}
   - name: exporter
     port: {{ $root.Values.exporter.port }}
