--- a/charts/redis-ha/templates/redis-ha-service.yaml
+++ b/charts/redis-ha/templates/redis-ha-service.yaml
@@ -16,14 +16,30 @@ spec:
   type: ClusterIP
   clusterIP: None
   ports:
+  {{- if ne (int .Values.redis.port) 0 }}
   - name: server
     port: {{ .Values.redis.port }}
     protocol: TCP
     targetPort: redis
+  {{- end }}
+  {{- if .Values.redis.tlsPort }}
+  - name: server-tls
+    port: {{ .Values.redis.tlsPort }}
+    protocol: TCP
+    targetPort: redis-tls
+  {{- end }}
+  {{- if ne (int .Values.sentinel.port) 0 }}
   - name: sentinel
     port: {{ .Values.sentinel.port }}
     protocol: TCP
     targetPort: sentinel
+  {{- end }}
+  {{- if .Values.sentinel.tlsPort }}
+  - name: sentinel-tls
+    port: {{ .Values.sentinel.tlsPort }}
+    protocol: TCP
+    targetPort: sentinel-tls
+  {{- end }}
 {{- if .Values.exporter.enabled }}
   - name: exporter-port
     port: {{ .Values.exporter.port }}
