Parameterizing redis initialDelaySeconds
Signed-off-by: Eric Ferreira <rockstar2304@gmail.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -178,7 +178,7 @@ spec:
         livenessProbe:
           tcpSocket:
             port: {{ .Values.redis.port }}
-          initialDelaySeconds: 15
+          initialDelaySeconds: {{ .Values.redis.livenessProbe.initialDelaySeconds }}
         resources:
 {{ toYaml .Values.redis.resources | indent 10 }}
         ports:
