--- a/charts/redis-ha/templates/redis-ha-pdb.yaml
+++ b/charts/redis-ha/templates/redis-ha-pdb.yaml
@@ -9,6 +9,9 @@ metadata:
 spec:
   selector:
     matchLabels:
+      # The replica label is set on StatefulSet pods but not the Test pods
+      # We want to avoid including the Test pods in the budget
+      {{ template "redis-ha.fullname" . }}: replica
       release: {{ .Release.Name }}
       app: {{ template "redis-ha.name" . }}
 {{ toYaml .Values.podDisruptionBudget | indent 2 }}
