--- a/charts/redis-ha/templates/redis-ha-role.yaml
+++ b/charts/redis-ha/templates/redis-ha-role.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.serviceAccount.create  .Values.rbac.create }}
+{{- if and .Values.serviceAccount.create .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -16,4 +16,14 @@ rules:
     - endpoints
   verbs:
     - get
-{{- end }}
+{{- if .Values.podSecurityPolicy.create }}
+- apiGroups:
+    - 'policy'
+  resources:
+    - 'podsecuritypolicies'
+  verbs:
+    - 'use'
+  resourceNames:
+    - {{ template "redis-ha.fullname" . }}
+{{- end -}}
+{{- end -}}
