Change servicemonitor label to exporter label.
Create a label for the redis-ha-service that a servicemonitor can use,
when the prometheus exporter is enabled.
This allows external servicemonitors to get the correct service
as well.

Signed-off-by: Phillip Stagnet <p.stagnet@syseleven.de>

--- a/charts/redis-ha/templates/redis-ha-servicemonitor.yaml
+++ b/charts/redis-ha/templates/redis-ha-servicemonitor.yaml
@@ -31,5 +31,5 @@ spec:
     matchLabels:
       app: {{ template "redis-ha.name" . }}
       release: {{ .Release.Name }}
-      servicemonitor: enabled
+      exporter: enabled
 {{- end }}
