--- a/charts/redis-ha/templates/redis-ha-service.yaml
+++ b/charts/redis-ha/templates/redis-ha-service.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
-{{- if and ( .Values.exporter.enabled ) ( .Values.exporter.serviceMonitor.enabled ) }}
-    servicemonitor: enabled
+{{- if .Values.exporter.enabled }}
+    exporter: enabled
 {{- end }}
   annotations:
   {{- if .Values.serviceAnnotations }}
