--- a/charts/redis-ha/templates/redis-ha-rolebinding.yaml
+++ b/charts/redis-ha/templates/redis-ha-rolebinding.yaml
@@ -1,14 +1,11 @@
 {{- if and .Values.serviceAccount.create .Values.rbac.create }}
-kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
 metadata:
   name: {{ template "redis-ha.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app: {{ template "redis-ha.fullname" . }}
+{{ include "labels.standard" . | indent 4 }}
 subjects:
 - kind: ServiceAccount
   name: {{ template "redis-ha.serviceAccountName" . }}
