--- a/charts/redis-ha/templates/redis-haproxy-psp.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-psp.yaml
@@ -1,17 +1,18 @@
-{{- if .Values.podSecurityPolicy.create }}
+{{- if and .Values.haproxy.podSecurityPolicy.create .Values.haproxy.enabled }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: {{ template "redis-ha.fullname" . }}
+  name: {{ template "redis-ha.fullname" . }}-haproxy
   labels:
 {{ include "labels.standard" . | indent 4 }}
+    component: {{ template "redis-ha.fullname" . }}-haproxy
 spec:
   allowPrivilegeEscalation: false
   fsGroup:
     rule: 'MustRunAs'
     ranges:
-      - min: {{ .Values.securityContext.fsGroup }}
-        max: {{ .Values.securityContext.fsGroup }}
+      - min: {{ .Values.haproxy.securityContext.fsGroup }}
+        max: {{ .Values.haproxy.securityContext.fsGroup }}
   hostIPC: false
   hostNetwork: false
   hostPID: false
@@ -22,18 +23,17 @@ spec:
   runAsUser:
     rule: 'MustRunAs'
     ranges:
-      - min: {{ .Values.securityContext.runAsUser }}
-        max: {{ .Values.securityContext.runAsUser }}
+      - min: {{ .Values.haproxy.securityContext.runAsUser }}
+        max: {{ .Values.haproxy.securityContext.runAsUser }}
   seLinux:
     rule: 'RunAsAny'
   supplementalGroups:
     rule: 'MustRunAs'
     ranges:
-      - min: {{ .Values.securityContext.runAsUser }}
-        max: {{ .Values.securityContext.runAsUser }}
+      - min: {{ .Values.haproxy.securityContext.runAsUser }}
+        max: {{ .Values.haproxy.securityContext.runAsUser }}
   volumes:
     - 'configMap'
     - 'secret'
     - 'emptyDir'
-    - 'persistentVolumeClaim'
 {{- end -}}
