--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -56,6 +56,15 @@ haproxy:
   annotations: {}
   resources: {}
   emptyDir: {}
+
+  ## PodSecurityPolicy configuration
+  ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/
+  ##
+  podSecurityPolicy:
+    ## Specifies whether a PodSecurityPolicy should be created
+    ##
+    create: false
+
   ## Enable sticky sessions to Redis nodes via HAProxy
   ## Very useful for long-living connections as in case of Sentry for example
   stickyBalancing: false
