[stable/redis-ha] Slave priority - Never promote defined slave to be master (#24)
* redis-ha - slave priority - never promote to be master

* redis-ha - ro slaves - comment fix, readme update

* redis-ha - ro slaves - readme update

* redis-ha - ro slaves - fix linting

* redis-ha - ro slaves - posix

* redis_ha - 4.7.0

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -16,6 +16,13 @@ imagePullSecrets: []
 ## replicas number for each component
 replicas: 3
 
+## read-only replicas
+## indexed slaves get never promoted to be master
+## index starts with 0 - which is master on init
+## i.e. "8,9" means 8th and 9th slave will be replica with replica-priority=0
+## see also: https://redis.io/topics/sentinel
+ro_replicas: ""
+
 ## Kubernetes priorityClass name for the redis-ha-server pod
 # priorityClassName: ""
 
