--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -399,3 +399,21 @@ hostPath:
   chown: true
 
 emptyDir: {}
+
+# restore init container is executed if restore.[s3|ssh].source is not false
+# restore init container creates /data/dump.rdb_ from original if exists
+# restore init container overrides /data/dump.rdb
+# secrets are stored into environment of init container - stored encoded on k8s
+# REQUIRED for s3 restore: AWS 'access_key' and 'secret_key'
+# EXAMPLE source for s3 restore: 's3://bucket/dump.rdb'
+# REQUIRED for ssh restore: 'key' should be in one line including CR i.e. '-----BEGIN RSA PRIVATE KEY-----\n...\n...\n...\n-----END RSA PRIVATE KEY-----'
+# EXAMPLE source for ssh restore: 'user@server:/path/dump.rdb'
+restore:
+  timeout: 600
+  s3:
+    source: false
+    access_key: ""
+    secret_key: ""
+  ssh:
+    source: false
+    key: ""
