[stable/redis-ha] - Variable probes for exporter (#53)
* redis-ha - variable probes for exporter

* redis-ha 4.8.0

* redis-ha - exporter_probe_variable - typo

Co-authored-by: Aaron Layfield <Aaron.Layfield@gmail.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -311,9 +311,9 @@ spec:
           httpGet:
             path: {{ .Values.exporter.scrapePath }}
             port: {{ .Values.exporter.port }}
-          initialDelaySeconds: 15
-          timeoutSeconds: 5
-          periodSeconds: 15
+          initialDelaySeconds: {{ .Values.exporter.livenessProbe.initialDelaySeconds }}
+          timeoutSeconds: {{ .Values.exporter.livenessProbe.timeoutSeconds }}
+          periodSeconds: {{ .Values.exporter.livenessProbe.periodSeconds }}
         resources:
 {{ toYaml .Values.exporter.resources | indent 10 }}
         ports:
