--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -358,6 +358,13 @@ exporter:
     # Set timeout for scrape
     # timeout: 10s
 
+  # prometheus exporter SCANS redis db which can take some time
+  # allow different probe settings to not let container crashloop
+  livenessProbe:
+    initialDelaySeconds: 15
+    timeoutSeconds: 3
+    periodSeconds: 15
+
 podDisruptionBudget: {}
   # maxUnavailable: 1
   # minAvailable: 1
