Adding some minor adjustment with working output.

--- a/charts/redis-ha/templates/redis-ha-configmap.yaml
+++ b/charts/redis-ha/templates/redis-ha-configmap.yaml
@@ -9,7 +9,7 @@ metadata:
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     app: {{ template "redis-ha.fullname" . }}
     {{- range $key, $value := .Values.configmap.labels }}
-    {{ $key }}: {{ $value }}
+    {{ $key }}: {{ $value | toString }}
     {{- end }}
 data:
   redis.conf: |
