--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -95,7 +95,7 @@ haproxy:
     enabled: false
     # prometheus port & scrape path
     port: 9101
-    portName: exporter-port
+    portName: http-exporter-port
     scrapePath: /metrics
 
     serviceMonitor:
