--- a/charts/redis-ha/templates/redis-ha-secret.yaml
+++ b/charts/redis-ha/templates/redis-ha-secret.yaml
@@ -1,3 +1,5 @@
+{{- if not .Values.restore.existingSecret }}
+
 {{- $regexRestoreS3 := "^s3://.+|^S3://.+" -}}
 {{- $regexRestoreSSH := "^.+@.+:.+" -}}
 
@@ -21,4 +23,6 @@ data:
   AWS_SECRET_ACCESS_KEY: "{{ .Values.restore.s3.secret_key | b64enc }}"
   AWS_ACCESS_KEY_ID: "{{ .Values.restore.s3.access_key | b64enc }}"
 {{- end }}
+{{- end }}
+
 {{- end }}
