Add annotations to redis statefulset
Signed-off-by: Joren Zandstra <jorenzandstra@yahoo.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -9,6 +9,8 @@ metadata:
   labels:
     {{ template "redis-ha.fullname" . }}: replica
 {{ include "labels.standard" . | indent 4 }}
+  annotations:
+{{ toYaml .Values.redis.statefulset.annotations | indent 2 }}
 spec:
   selector:
     matchLabels:
