--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -261,7 +261,7 @@ spec:
             command:
               - sh
               - -c
-              - /health/redis_liveness.sh {{ .Values.redis.livenessProbe.timeoutSeconds }}
+              - /health/redis_liveness.sh
         resources:
 {{ toYaml .Values.redis.resources | indent 10 }}
         ports:
@@ -324,7 +324,7 @@ spec:
             command:
               - sh
               - -c
-              - /health/sentinel_liveness.sh {{ .Values.sentinel.livenessProbe.timeoutSeconds }}
+              - /health/sentinel_liveness.sh
         resources:
 {{ toYaml .Values.sentinel.resources | indent 10 }}
         ports:
