[charts/redis-ha] add the option to add annotations to the Redis StatefulSet (#74)
* Bump chart

Signed-off-by: Joren Zandstra <jorenzandstra@yahoo.com>

* Bump node_exporter version

Signed-off-by: Joren Zandstra <jorenzandstra@yahoo.com>

* Add redis server CA to node_exporter container environment

Signed-off-by: Joren Zandstra <jorenzandstra@yahoo.com>

* Add annotations to redis statefulset

Signed-off-by: Joren Zandstra <jorenzandstra@yahoo.com>

* Bump chart version

Signed-off-by: Joren Zandstra <jorenzandstra@yahoo.com>

* Fix annotation indent

Signed-off-by: Joren Zandstra <jorenzandstra@yahoo.com>

* Bump chart

* Place annotations directly under redis

Co-authored-by: Aaron Layfield <Aaron.Layfield@gmail.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -9,6 +9,8 @@ metadata:
   labels:
     {{ template "redis-ha.fullname" . }}: replica
 {{ include "labels.standard" . | indent 4 }}
+  annotations:
+{{ toYaml .Values.redis.annotations | indent 4 }}
 spec:
   selector:
     matchLabels:
