--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -361,6 +361,7 @@ exporter:
 
   # prometheus port & scrape path
   port: 9121
+  portName: exporter-port
   scrapePath: /metrics
 
   # Address/Host for Redis instance. Default: localhost
